2013-02-04  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloCAF-00-02-02
        * Final status at shutdown Feb 2013.
        * Jobs now use 17.2.8.7

2012-10-11  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloCAF-00-02-01
        * Status at move of jobs to 17.2.6.2

2012-07-05  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Bugfix in PlotCalibrationHV.py

2012-06-08  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Bugfix in ResourceWatcher.py

2012-05-04  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Configuration and jobOption updates.

2012-03-27  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloCAF-00-02-00
        * Release 17 version.

2012-02-28  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloCAF-00-01-00
        * Final 15.2.0 version.
