@@ -2,7 +2,7 @@ dbConnection = "/afs/cern.ch/user/l/l1ccalib/testarea/17.2.0.2/Trigger/TrigT1/Tr
 
 # MailingList = ["veit.scharf@kip.uni-heidelberg.de"]
 #MailingList = ["prieur@cern.ch", "martin.wessels@cern.ch", "john.morris@cern.ch", "veit.scharf@kip.uni-heidelberg.de", "murrough.landon@cern.ch", "jb@hep.ph.bham.ac.uk", "pjwf@hep.ph.bham.ac.uk"]
-MailingList = ["martin.wessels@cern.ch", "murrough.landon@cern.ch", "Bruce.Barnett@cern.ch", "jb@hep.ph.bham.ac.uk", "pjwf@hep.ph.bham.ac.uk", "c.wiglesworth@qmul.ac.uk"]
+MailingList = ["martin.wessels@cern.ch", "murrough.landon@cern.ch", "Bruce.Barnett@cern.ch", "jb@hep.ph.bham.ac.uk", "pjwf@hep.ph.bham.ac.uk"]
 #MailingList = ["pjwf@hep.ph.bham.ac.uk"]
 
 # Paths don't appear to be used anymore in RunsProvider
@@ -38,7 +38,8 @@ runListeners = {
                     "minevents":1700,
 
                     #"initialrun":152000,
-                    "initialrun":195000,
+                    #"initialrun":195000,
+                    "initialrun":210000,
 
                     "fileslocations":["/castor/cern.ch/grid/atlas/DAQ/l1calo/#RUN_NUMBER_PADDED#", "/castor/cern.ch/grid/atlas/DAQ/l1calo/#RUN_NUMBER#", "/castor/cern.ch/grid/atlas/DAQ/l1calo"]
                 },
@@ -71,7 +72,8 @@ runListeners = {
                     "minevents":1700,
 
                     #"initialrun":152000,
-                    "initialrun":195000,
+                    #"initialrun":195000,
+                    "initialrun":210000,
 
                     "fileslocations":["/castor/cern.ch/grid/atlas/DAQ/l1calo/#RUN_NUMBER_PADDED#", "/castor/cern.ch/grid/atlas/DAQ/l1calo/#RUN_NUMBER#", "/castor/cern.ch/grid/atlas/DAQ/l1calo"]
                 },
@@ -104,7 +106,8 @@ runListeners = {
                     "minevents":1700,
 
                     #"initialrun":152000,
-                    "initialrun":195000,
+                    #"initialrun":195000,
+                    "initialrun":210000,
 
                     "fileslocations": ["/castor/cern.ch/grid/atlas/DAQ/l1calo/#RUN_NUMBER_PADDED#", "/castor/cern.ch/grid/atlas/DAQ/l1calo/#RUN_NUMBER#", "/castor/cern.ch/grid/atlas/DAQ/l1calo"]
                 },
@@ -137,7 +140,8 @@ runListeners = {
                     "minevents":0,
 
                     #"initialrun":152000,
-                    "initialrun":195000,
+                    #"initialrun":195000,
+                    "initialrun":210000,
 
                     "fileslocations": ["/castor/cern.ch/grid/atlas/DAQ/l1calo/#RUN_NUMBER_PADDED#", "/castor/cern.ch/grid/atlas/DAQ/l1calo/#RUN_NUMBER#", "/castor/cern.ch/grid/atlas/DAQ/l1calo"]
                 },
@@ -172,7 +176,8 @@ runListeners = {
                     "minevents":0,
 
                     #"initialrun":152000,
-                    "initialrun":195000,
+                    #"initialrun":195000,
+                    "initialrun":210000,
 
                     "fileslocations":["/castor/cern.ch/grid/atlas/DAQ/l1calo/#RUN_NUMBER_PADDED#", "/castor/cern.ch/grid/atlas/DAQ/l1calo/#RUN_NUMBER#", "/castor/cern.ch/grid/atlas/DAQ/l1calo"]
                 },
@@ -206,7 +211,8 @@ runListeners = {
                     "minevents":0,
 
                     #"initialrun":152000,
-                    "initialrun":195000,
+                    #"initialrun":195000,
+                    "initialrun":210000,
 
                     "fileslocations": ["/castor/cern.ch/grid/atlas/DAQ/l1calo/#RUN_NUMBER_PADDED#", "/castor/cern.ch/grid/atlas/DAQ/l1calo/#RUN_NUMBER#", "/castor/cern.ch/grid/atlas/DAQ/l1calo"]
                 },
@@ -239,7 +245,8 @@ runListeners = {
                     "minevents":0,
 
                     #"initialrun":152000,
-                    "initialrun":195000,
+                    #"initialrun":195000,
+                    "initialrun":210000,
 
                     "fileslocations":["/castor/cern.ch/grid/atlas/DAQ/l1calo/#RUN_NUMBER_PADDED#", "/castor/cern.ch/grid/atlas/DAQ/l1calo/#RUN_NUMBER#", "/castor/cern.ch/grid/atlas/DAQ/l1calo"]
                 }
