@@ -1,3 +1,3 @@
 export AtlasSetup=/afs/cern.ch/atlas/software/releases/17.2.0/AtlasSetup
-source $AtlasSetup/scripts/asetup.sh 17.2.0.2,32
+source $AtlasSetup/scripts/asetup.sh 17.2.0.2,32,slc5
 export STAGE_SVCCLASS=atlcal
