@@ -1,3 +1,6 @@
+2014-02-17  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
+        * Minor script updates.
+
 2013-02-04  Peter Faulkner  <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloCAF-00-02-02
         * Final status at shutdown Feb 2013.
